# simres-glp-aysen

./: .gitignore  README.md  RESUMEN_LIMPIEZA.md  ayuda.txt  diagrama.drawio  ejecutar_todo.bat  ejecutar_todo.sh  pyproject.toml  requirements.txt
backend/: .env.example  fix_montecarlo_bug.py  requirements.txt  run.bat  start_server.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: simulation_runner.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  configuracion.py  montecarlo.py  simulacion.py
backend/app/schemas/: __init__.py  configuracion.py  montecarlo.py  resultado.py  simulacion.py
backend/app/services/: anova_service.py  configuracion_service.py  montecarlo_service.py  simulacion_service.py
bll/: __init__.py  config.py  entities.py  experiment.py  simulation.py  statistics.py
configs/: escenario_aysen_base.yml  escenario_aysen_real.yml  escenario_base.yaml
dal/: __init__.py  checkpoint.py  export.py
diagramas/: diagrama_flujo_simulacion.py  diagrama_scor_glp_aysen.drawio  diagrama_scor_simple.drawio  diagrama_simulacion.drawio  generar_drawio.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ANOVATable.tsx  MonteCarloDistributions.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analysis.tsx  Compare.tsx  Configuration.tsx  Dashboard.tsx  History.tsx  MonteCarlo.tsx  Results.tsx  Validation.tsx
pl/: __init__.py
pl/api/: __init__.py  experiment.py  simulation.py
pl/dto/: __init__.py  schemas.py
results/: simulacion_aysen_01.json  simulacion_aysen_01.parquet  simulacion_aysen_01_resumen.csv  simulacion_aysen_02.json  simulacion_aysen_02.parquet  simulacion_aysen_02_resumen.csv
scripts/: analizar_resultados.py  ejecutar_experimentos.py  ejecutar_simulacion.py  ejecutar_simulacion_base.py  experimento_montecarlo.py  experimento_tesis.py  generar_figuras_profesionales.py  generar_figuras_tesis.py  test_modelo.py  test_unitarios.py  validar_modelo.py  visualizar_resultados.py  visualizar_resultados_tesis.py
src/: configuracion.py  entidades.py  entidades_aysen.py  eventos.py  metricas.py  modelo.py  modelo_aysen.py  modelo_simple.py  monitores.py  simulacion.py  transporte.py
src/analisis_c/: Makefile  sequence_analyzer.c
(+13 files in other folders)
