[tool.poetry]
name = "simres-glp-aysen"
version = "0.1.0"
description = "Simulación de la cadena de suministro de GLP en Aysén."
authors = ["Carlos Subiabre Saldivia"]
license = "MIT"
readme = "README.md"
package-mode = false  # <-- ¡LA LÍNEA MÁGICA!

[tool.poetry.dependencies]
python = "^3.11"
simpy = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
typer = {extras = ["all"], version = "*"}
pyyaml = "*"
tqdm = "^4.67.1"
scipy = "^1.16.2"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.2"
networkx = "^3.5"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"