[tool.poetry]
name = "simres-glp-aysen"
version = "0.1.0"
description = "Simulación de la cadena de suministro de GLP en Aysén."
authors = ["Carlos Subiabre Saldivia"]
license = "MIT"
readme = "README.md"
package-mode = false  # <-- ¡LA LÍNEA MÁGICA!

[tool.poetry.dependencies]
python = "^3.11"
simpy = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
typer = {extras = ["all"], version = "*"}
pyyaml = "*"
tqdm = "^4.67.1"
scipy = "^1.16.2"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.2"
networkx = "^3.5"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
plotly = "^6.3.1"
kaleido = "^1.1.0"
pydantic = "^2.12.5"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"